Backported issue #4589 to Python 2.5.3: Propagated an exception thrown by a context manager's __exit__ method's result while it's being converted to bool.